[gd_scene load_steps=3 format=3 uid="uid://cu1fwe52xa2il"]

[ext_resource type="Script" path="res://PlayerController.gd" id="1_8jn2h"]

[sub_resource type="BoxShape3D" id="BoxShape3D_itav6"]

[node name="Player" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, 2)
script = ExtResource("1_8jn2h")

[node name="PlayerCameraView" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
current = true
fov = 90.0
near = 0.04

[node name="OmniLight3D" type="OmniLight3D" parent="."]
omni_range = 3.365
omni_attenuation = 1.93187
omni_shadow_mode = 0

[node name="CastForward" type="RayCast3D" parent="."]
target_position = Vector3(-1.5, 0, 0)

[node name="CastBackwards" type="RayCast3D" parent="."]
target_position = Vector3(1.5, 0, 0)

[node name="Player" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("BoxShape3D_itav6")
